--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,4 @@ seaborn
 pillow
 keras
 tensorflow
-
-# This is only the Python bindings for graphviz
-# Need to use system installers for graphviz itself
-graphviz
+allennlp
