--- a/environment.yml
+++ b/environment.yml
@@ -14,9 +14,8 @@ dependencies:
   - jupyter
   - seaborn
   - pillow
-  - graphviz
-  - pygraphviz
   - pip:
       - torchsummary
       - keras
       - tensorflow
+      - allennlp
