--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,8 @@ channels:
   - conda-forge
   - pytorch
 dependencies:
-  - python=3.7
+  - python=3
+  - pip
   - scikit-learn
   - pytorch
   - torchvision
